--- a/index.html
+++ b/index.html
@@ -55,17 +55,18 @@
             alt="card-work-bestay-img"
             class="img-card"
           />
-          <p>
+          <h4>Increasing Conversions Through Design at Bestay.co</h4>
+          <p class="card-description">
             Bestay.co is group of hospitality enthusiasts, ready to put in our
             best efforts. They helps tourists find the best stay and experiences
             in Bali.
           </p>
           <ul class="label-work">
-            <li>
-              <p>Strategy</p>
+            <li class="card-label-container">
+              <p class="card-label">Strategy</p>
             </li>
-            <li>
-              <p>UI/UX Design</p>
+            <li class="card-label-container">
+              <p class="card-label">UI/UX Design</p>
             </li>
           </ul>
         </li>
@@ -75,21 +76,22 @@
             alt="card-work-sosialoka-img"
             class="img-card"
           />
-          <p>
+          <h4>Building Digital Campaign Platform for Musician</h4>
+          <p class="card-description">
             Helping Musicians effortlessly promote their music across all social
             media platform. The platform integrates with multiple advertising
             networks, including Meta Ads, TikTok Ads, and YouTube Ads, allowing
             seamless music campaign distribution.
           </p>
           <ul class="label-work">
-            <li>
-              <p>Research</p>
+            <li class="card-label-container">
+              <p class="card-label">Research</p>
             </li>
-            <li>
-              <p>UI/UX Design</p>
+            <li class="card-label-container">
+              <p class="card-label">UI/UX Design</p>
             </li>
-            <li>
-              <p>Collaboration</p>
+            <li class="card-label-container">
+              <p class="card-label">Collaboration</p>
             </li>
           </ul>
         </li>
@@ -99,7 +101,8 @@
             alt="card-work-djp-img"
             class="img-card"
           />
-          <p>
+          <h4>Optimizing DJP Learning Journeys for Career Growth</h4>
+          <p class="card-description">
             Designed an internal learning platform for the Directorate General
             of Taxes (DJP) to support employee career advancement. The platform
             streamlines learning and testing processes, making it easier for
@@ -107,8 +110,8 @@
             structured experience.
           </p>
           <ul class="label-work">
-            <li>
-              <p>UI/UX Design</p>
+            <li class="card-label-container">
+              <p class="card-label">UI/UX Design</p>
             </li>
           </ul>
         </li>
@@ -118,17 +121,18 @@
             alt="card-work-ifglife-img"
             class="img-card"
           />
-          <p>
+          <h4>Boosting Engagement and Streamlining IFG Life</h4>
+          <p class="card-description">
             Redesigned the LifeSAVER app to boost daily active users, shorten
             onboarding time, and simplify the insurance claim process—resulting
             in a smoother, faster, and more engaging user experience.
           </p>
           <ul class="label-work">
-            <li>
-              <p>UI/UX Design</p>
+            <li class="card-label-container">
+              <p class="card-label">UI/UX Design</p>
             </li>
-            <li>
-              <p>Collaboration</p>
+            <li class="card-label-container">
+              <p class="card-label">Collaboration</p>
             </li>
           </ul>
         </li>
