--- a/index.html
+++ b/index.html
@@ -138,5 +138,22 @@
         </li>
       </ul>
     </div>
+    <div class="intro-section">
+      <p class="page-title-secondary">Profile</p>
+      <div class="intro-container">
+        <img src="img asset/IMG_3850.jpg" alt="profile-bara" />
+        <p class="intro-description">
+          Hi, I'm Bara, a passionate UI/UX Designer with a keen interest in
+          various business sectors. My strength lies in simplifying complex
+          workflows and translating them into intuitive, visually stunning, and
+          engaging designs. I strive to create user experiences that are not
+          only functional but also visually appealing, helping businesses thrive
+          by making their digital platforms more efficient and attractive. Every
+          design I create is focused on clarity, usability, and seamless
+          interaction, ensuring that users not only enjoy the experience but
+          also feel guided every step of the way.
+        </p>
+      </div>
+    </div>
   </body>
 </html>
