--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <!--Navigation Bar-->
     <nav class="navbar">
-      <div class="logo"><img src="img asset/IMG_3850.jpg" alt="logo" /></div>
+      <div class="logo"><img src="img asset/IMG_3850.png" alt="logo" /></div>
       <ul class="nav-items">
         <li>Home</li>
         <li>Works</li>
@@ -141,7 +141,11 @@
     <div class="intro-section">
       <p class="page-title-secondary">Profile</p>
       <div class="intro-container">
-        <img src="img asset/IMG_3850.jpg" alt="profile-bara" />
+        <img
+          src="img asset/IMG_3850.png"
+          alt="profile-bara"
+          class="profile-img"
+        />
         <p class="intro-description">
           Hi, I'm Bara, a passionate UI/UX Designer with a keen interest in
           various business sectors. My strength lies in simplifying complex
@@ -154,6 +158,74 @@
           also feel guided every step of the way.
         </p>
       </div>
+    </div>
+    <div class="review-section">
+      <p class="page-title">What My Colleagues Said About Me</p>
+      <ul class="review-list">
+        <li class="review-card">
+          <ul class="profile-detail">
+            <img
+              src="img asset/Photo by GRAHAM MANSFIELD.png"
+              alt="colleagues-img"
+              class="reviewer-photo"
+            />
+            <ul class="name-container">
+              <li class="name">
+                <p class="john-doe">John Doe</p>
+              </li>
+              <li class="profession">
+                <p class="professionn">Profession</p>
+              </li>
+            </ul>
+          </ul>
+          <p class="review-description">
+            Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
+            sint. Velit officia consequat duis enim velit mollit.
+          </p>
+        </li>
+        <li class="review-card">
+          <ul class="profile-detail">
+            <img
+              src="img asset/Photo by GRAHAM MANSFIELD.png"
+              alt="colleagues-img"
+              class="reviewer-photo"
+            />
+            <ul class="name-container">
+              <li class="name">
+                <p class="john-doe">John Doe</p>
+              </li>
+              <li class="profession">
+                <p class="professionn">Profession</p>
+              </li>
+            </ul>
+          </ul>
+          <p class="review-description">
+            Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
+            sint. Velit officia consequat duis enim velit mollit.
+          </p>
+        </li>
+        <li class="review-card">
+          <ul class="profile-detail">
+            <img
+              src="img asset/Photo by GRAHAM MANSFIELD.png"
+              alt="colleagues-img"
+              class="reviewer-photo"
+            />
+            <ul class="name-container">
+              <li class="name">
+                <p class="john-doe">John Doe</p>
+              </li>
+              <li class="profession">
+                <p class="professionn">Profession</p>
+              </li>
+            </ul>
+          </ul>
+          <p class="review-description">
+            Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
+            sint. Velit officia consequat duis enim velit mollit.
+          </p>
+        </li>
+      </ul>
     </div>
   </body>
 </html>
