--- a/index.html
+++ b/index.html
@@ -21,6 +21,14 @@
         <li>Works</li>
         <button class="CTA-Button">Contact</button>
       </ul>
+      <button class="hamburger-menu">
+        <img
+          src="img asset/Hamburger Menu Icon.svg"
+          alt="Hamburger"
+          width="100%"
+          height="100%"
+        />
+      </button>
     </nav>
     <div class="hero-section">
       <h1>
@@ -34,7 +42,7 @@
             alt="uiuxdesigner-icon"
             class="hero-img"
           />
-          <p>UI/UX Designer</p>
+          <p class="img-text">UI/UX Designer</p>
         </li>
         <li class="img-container">
           <img
@@ -42,7 +50,7 @@
             alt="developer-icon"
             class="hero-img"
           />
-          <p>Developer</p>
+          <p class="img-text">Developer</p>
         </li>
       </ul>
     </div>
